--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     environment:
       DATABASE_URL: postgresql://stt_user:stt_password@postgres:5432/stt_db
       EVOLUTION_API_KEY: ${EVOLUTION_API_KEY}
-      EVOLUTION_BASE_URL: ${EVOLUTION_BASE_URL:-https://foundation-models.api.internal.cloud.ru/v1}
+      EVOLUTION_BASE_URL: ${EVOLUTION_BASE_URL}
       EVOLUTION_KEY_ID: ${EVOLUTION_KEY_ID}
       EVOLUTION_SECRET: ${EVOLUTION_SECRET}
       APP_ENV: ${APP_ENV:-development}
