Удалены неиспользуемые переменные EVOLUTION_KEY_ID и EVOLUTION_SECRET
- Удалены из docker-compose.yml (environment секция backend)
- Удалены из backend/app/config.py (Settings класс)
- Удалены из backend/env.example
- Удалены из локального .env файла

Эти переменные нигде не использовались в коде - для аутентификации
в Evolution Cloud.ru API используется только EVOLUTION_API_KEY.

Backend пересобран и протестирован - работает корректно.

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,8 +1,6 @@
 # Evolution Cloud.ru API Configuration
 EVOLUTION_API_KEY=sk-your-api-key
-EVOLUTION_BASE_URL=https://foundation-models.api.internal.cloud.ru/v1
-EVOLUTION_KEY_ID=your-key-id
-EVOLUTION_SECRET=your-secret
+EVOLUTION_BASE_URL=https://foundation-models.api.cloud.ru/v1
 
 # Database Configuration
 DATABASE_URL=postgresql://stt_user:stt_password@postgres:5432/stt_db
