Исправлен CORS и добавлен корневой env.example
- Изменён VITE_API_URL на '/api' для работы через Vite proxy (устраняет CORS ошибку при cross-origin запросах с localhost:5173 на localhost:8000)
- Добавлен корневой env.example как шаблон для .env файла (docker-compose читает переменные из корневого .env)
- Изменения в: docker-compose.yml, env.example

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,7 +61,7 @@ services:
       dockerfile: Dockerfile
     container_name: stt-frontend
     environment:
-      VITE_API_URL: http://localhost:8000/api
+      VITE_API_URL: /api
     volumes:
       - ./frontend:/app
       - /app/node_modules
